2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* lib/gm_conf-gconf.c: Use PACKAGE_NAME instead of gnomemeeting
	to start listeners.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Fixed OPAL version detection.

	* src/Makefile.am: Cleanups.

	* src/misc.cpp: Use PACKAGE_NAME in gnomemeeting_threads_*.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Use PACKAGE_NAME everywhere.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Revered unintentional change.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* configure.in, gnomemeeting.desktop.in, gnomemeeting.schemas.in.in,
	src/Makefile.am, src/common.h: Use package name where convenient.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* src/connection.cpp, src/connection.h, src/gatekeeper.cpp, 
	src/gatekeeper.h: Removed those files.

	* configure.in, src/Makefile.am: Added support for an OPAL version
	installed in $PREFIX after my commits to OPAL CVS.

	* src/common.h: Disable IXJ for now.

	* src/endpoint.cpp, src/endpoint.h, src/lid.cpp, src/lid.h, 
	src/main_window.cpp, src/pcssendpoint.cpp, src/pcssendpoint.h,
	src/pref_window.cpp, src/sound_handling.cpp,
	src/zeroconf_publisher.cpp: Various fixes. Added possibility to change
	the audio volume after my commit to OPAL CVS to add support for this.

2004-12-02  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Added OPAL Support.

	* gnomemeeting.schemas.in.in: Removed obsolete register alias as
	primary alias.

	* lib/stats_drawing_area.c, lib/stats_drawing_area.h: Cleaned code so
	that computations are only done in the endpoint. Some graphical fixes
	too.
	
	* lib/contacts/Makefile.am: Fixed makefile to support pwlib in another
	place than /usr/

	* po/POTFILES.in: Added and removed files.

	* src/Makefile.am, src/addressbook_window.cpp, src/callbacks.cpp,
	src/chat_window.cpp, src/common.h, src/config.cpp, src/connection.cpp,