@@ -1,3 +1,13 @@
+2004-12-06  Damien Sandras  <dsandras@gnome.org>
+
+	* src/chat_window.cpp, src/endpoint.cpp, src/endpoint.h: Added text
+	chat support back.
+
+2004-12-06  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-ldap.cpp:
+	Fixed warnings, thanks Kilian!
+
 2004-12-05  Damien Sandras  <dsandras@gnome.org>
 
 	* lib/gm_conf-gconf.c: Use PACKAGE_NAME instead of gnomemeeting
